--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,4 @@
-<div class="row gutter-0" style="height: 100vh; width: 100%; background-color: gray">
-
-</div>        
+<div class="row gutter-0 backgrnd" style="height: 100vh; width: 100%">
+    <h1 class="aboutPage">About</h1>
+    <h5 class="aboutPage">This website serves the purpose of keeping you notified on new episodes of your favourite shows. You can subscribe to shows and you can monitor it further in your subscriptions page.</h5>   
+</div>
