--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 12px;
 }
 
 html {
@@ -39,6 +39,6 @@ html {
 }
 
 ::selection {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 }
