things set in place for new wireframe

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -31,7 +31,7 @@
     color: lightgray;
 }
 .tile:hover {
-    background-color: #1a1a1a;
+    background-color: #1d1d1d;
     color: white;
 }
 .subsBtn {
