--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -9,10 +9,10 @@
 </div>
 <div class="row gutter-0" style="height:calc(100vh - 50px); width: 100%; overflow: auto">
     <div (click)="currentId=show.show.id; showMore = !showMore;" *ngFor="let show of shows; let i = index;" class="row tile">
-        <div class="col-md-1">
+        <div class="col-md-1 col-sm-4">
             <img src="{{show.show.image.medium || show.show.image}}" height="100px" width="75px">
         </div>
-        <div class="col-md-7">
+        <div class="col-md-7 col-sm-6">
             <span><b>{{show.show.name}}</b>&nbsp;({{show.show.premiered.split('-')[0]}})</span>
             <span class="badge"><i class="fa fa-star"></i>&nbsp;{{show.show.rating.average || '?'}}</span><br>
             <span style="font-size: 14px">Runtime: </span>
@@ -23,9 +23,9 @@
             <span style="font-size: 14px" *ngFor="let genre of show.show.genres">{{genre}}&nbsp;</span>
             <br>
             <span style="font-size: 14px">Seasons: </span>
-            <span style="font-size: 14px">{{seasons[i].length}}&nbsp;(~{{seasons[i][seasons[i].length-1].episodeOrder}} episodes/season)</span>
+            <span style="font-size: 14px">{{seasons[i].length || 0}}&nbsp;(~{{seasons[i][seasons[i].length-1 || 0].episodeOrder || 0}} episodes/season)</span>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-2">
             <button (click)="subscribe(show.show.id)" class="btn subsBtn">+&nbsp;subscribe</button>
             <button routerLink="/episode" class="btn subsBtn">all episodes</button>
             <button routerLink="/episode" class="btn subsBtn">more</button>
