--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,2 +1,9 @@
-<div class="row gutter-0" style="height: 100vh; width: 100%; background-color: gray">
+<div class="row gutter-0" style="height: 100vh; width: 100%; background-color: #222">
+    <div class="container-fluid" style="height: 300px; text-align: center;">
+        <span class="brand">tms</span>
+        <div class="clearfix"></div>
+        <div class="container">
+            <input type="text" placeholder="add shows..." class="searchBar">
+        </div>
+    </div>
 </div>
