--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,9 +1,2 @@
-<div class="row gutter-0" style="height: 100vh; width: 100%; background-color: #222">
-    <div class="container-fluid" style="height: 300px; text-align: center;">
-        <span class="brand">tms</span>
-        <div class="clearfix"></div>
-        <div class="container">
-            <input type="text" placeholder="add shows..." class="searchBar">
-        </div>
-    </div>
+<div class="row gutter-0" style="min-height: calc( 100vh - 180px); background-color: #222">
 </div>
