--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,6 @@
 <ng-template #subBlock>
     <app-subs></app-subs>
 </ng-template>
+<div class="row gutter-0" style="height: 300px; background-color: #222;">
+    
+</div>
