--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -18,9 +18,9 @@
             <span style="font-size: 16px">{{seasons[i].length || 0}}&nbsp;(~{{seasons[i][seasons[i].length-1 || 0].episodeOrder || 0}} episodes/season)</span>
         </div>
         <div class="col-md-2 col-xs-3">
-            <button (click)="subscribe(show.show.id)" class="btn subsBtn">+&nbsp;subscribe</button><br>
-            <button routerLink="/episode" class="btn subsBtn">all episodes</button><br>
-            <button routerLink="/episode" class="btn subsBtn">more</button>
+            <button (click)="subscribe(show.show.id)" class="btn subsBtn pull-right">subscribe</button><br>
+            <button routerLink="/episode" class="btn subsBtn pull-right">all episodes</button><br>
+            <button routerLink="/episode" class="btn subsBtn pull-right">more</button>
         </div>
     </div>
     </div>
