--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,2 +1,5 @@
 <div class="row gutter-0" style="min-height: calc( 100vh - 180px); background-color: #222">
+    <div class="container" style="margin-top: 30px;">
+        <span class="name">subscribe to shows to see their schedule</span>
+    </div>
 </div>
