--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="row gutter-0" style="min-height: 180px; width: 100%; background-color: #222">
     <div class="container" style="height: 180px;">
-        <input type="text"  [(ngModel)]="show" placeholder="tms" class="searchBar" routerLink="/search" (keypress)=eventHandler($event)>
+        <input type="text"  [(ngModel)]="show" placeholder="timemyshow" class="searchBar" routerLink="/search" (keypress)=eventHandler($event)>
     </div>
 </div>
 <div *ngIf="showSearch; else subBlock">
@@ -9,6 +9,5 @@
 <ng-template #subBlock>
     <app-subs></app-subs>
 </ng-template>
-<div class="row gutter-0" style="height: 300px; background-color: #222;">
-    
+<div class="row gutter-0" style="height: 150px; background-color: #222;">
 </div>
