--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,8 @@
     </div>
 </div>
 <div *ngIf="showSearch; else subBlock">
-    <app-search [show]="show"></app-search>
+    <app-search [myShows]="myShows" [show]="show"></app-search>
 </div>
 <ng-template #subBlock>
     <app-subs></app-subs>
-</ng-template>
-<div class="row gutter-0" style="height: 150px; background-color: #222;">
-</div>
+</ng-template>  
