--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,5 +1,12 @@
 <div class="row gutter-0" style="min-height: calc( 100vh - 180px); background-color: #222">
-    <div class="container" style="margin-top: 30px;">
+    <div *ngIf="myIds.length == 0; else showsBlock" class="container" style="margin-top: 30px;">
         <span class="name">subscribe to shows to see their schedule</span>
     </div>
+    <ng-template #showsBlock>
+        <div class="container">
+            <div *ngFor="let show of myShows; let i = index" class="tile">
+                {{show.name}}
+            </div>
+        </div>
+    </ng-template>
 </div>
