--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -15,7 +15,7 @@
             <span style="font-size: 16px" *ngFor="let genre of show.show.genres">{{genre}}&nbsp;</span>
             <br>
             <span style="font-size: 16px">Seasons: </span>
-            <span style="font-size: 16px">{{seasons[i].length || 0}}&nbsp;(~{{seasons[i][seasons[i].length-1 || 0].episodeOrder || 0}} episodes/season)</span>
+            <!-- <span style="font-size: 16px">{{seasons[i].length || 0}}&nbsp;(~{{seasons[i][seasons[i].length-1 || 0].episodeOrder || 0}} episodes/season)</span> -->
         </div>
         <div class="col-md-2 col-sm-2 col-xs-3">
             <button (click)="subscribe(show.show.id)" class="btn subsBtn pull-right">subscribe</button><br>
