--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,5 +1,5 @@
 <div class="row gutter-0" style="min-height: calc( 100vh - 180px); background-color: #222">
-    <div *ngIf="1 == 0; else showsBlock" class="container" style="margin-top: 30px;">
+    <div *ngIf="showCount == 0; else showsBlock" class="container" style="margin-top: 30px;">
         <span class="name">subscribe to shows to see their schedule</span>
     </div>
     <ng-template #showsBlock>
@@ -11,13 +11,7 @@
                             <div class="col-md-9 col-sm-8 col-xs-6">
                                 <span class="name"><b>{{show.name}}</b>&nbsp;({{show.premiered.split('-')[0]}})</span>
                                 <span class="badge"><i class="fa fa-star"></i>&nbsp;{{show.rating.average || '?'}}</span><br>
-                                <span style="font-size: 16px">Runtime: </span>
-                                <span style="font-size: 16px" *ngIf="show.runtime <= 5">{{show.runtime}} hours</span>
-                                <span style="font-size: 16px" *ngIf="show.runtime > 5">{{show.runtime}} minutes</span>
-                                <br>
-                                <span style="font-size: 16px">Genre: </span>
-                                <span style="font-size: 16px" *ngFor="let genre of show.genres">{{genre}}&nbsp;</span>
-                                <br>
+                                <span style="font-size: 16px">{{verdict[i]}}</span>
                             </div>
                             <div class="col-md-2 col-sm-2 col-xs-3">
                                 <button (click)="subscribe(show.id)" class="btn subsBtn pull-right">subscribe</button><br>
