--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -18,7 +18,7 @@
             <span style="font-size: 16px">{{seasons[i].length || 0}}&nbsp;(~{{seasons[i][seasons[i].length-1 || 0].episodeOrder || 0}} episodes/season)</span> -->
         </div>
         <div class="col-md-2 col-sm-2 col-xs-3">
-            <div *ngIf="subsList[myIds[i+1]]; then unsubBlock; else subBlock"></div>
+            <div *ngIf="subsList[resultIds[i]]; then unsubBlock; else subBlock"></div>
             <ng-template #unsubBlock>
                 <button (click)="unsubscribe(show.show.id)" class="btn subsBtn pull-right">unsubscribe</button>
             </ng-template>
