--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,10 +1,11 @@
 <div class="row gutter-0" style="min-height: calc( 100vh - 180px); background-color: #222">
-    <div *ngIf="showCount == 0; else showsBlock" class="container" style="margin-top: 30px;">
+    <div *ngIf="myIds.length == 0; else showsBlock" class="container" style="margin-top: 30px;">
         <span class="name">subscribe to shows to see their schedule</span>
     </div>
     <ng-template #showsBlock>
             <div class="container">
-                <div *ngFor="let show of myShows; let i = index" class="tile">
+                <div *ngFor="let show of myShows; let i = index">
+                    <div *ngIf="subsList[show.id]" class="tile">
                         <div class="col-md-1 col-sm-2 col-xs-2">
                                 <img src="{{show.image.medium || show.image}}" height="150px" width="100px" class="myImg">
                             </div>
@@ -14,10 +15,11 @@
                                 <span style="font-size: 16px">{{verdict[i]}}</span>
                             </div>
                             <div class="col-md-2 col-sm-2 col-xs-3">
-                                <button (click)="subscribe(show.id)" class="btn subsBtn pull-right">subscribe</button><br>
+                                <button (click)="unsubscribe(show.id)" class="btn subsBtn pull-right">unsubscribe</button><br>
                                 <button routerLink="/episode" class="btn subsBtn pull-right">all episodes</button><br>
                                 <button routerLink="/episode" class="btn subsBtn pull-right">more</button>
                             </div>
+                    </div>
                 </div>
             </div>
         </ng-template>
