--- a/src/app/subs/subs.component.html
+++ b/src/app/subs/subs.component.html
@@ -1,10 +1,10 @@
 <div class="row gutter-0" style="min-height: calc( 100vh - 180px); background-color: #222">
-    <div *ngIf="myIds.length == 0; else showsBlock" class="container" style="margin-top: 30px;">
+    <div *ngIf="myShows.length == 0; else showsBlock" class="container" style="margin-top: 30px;">
         <span class="name">subscribe to shows to see their schedule</span>
     </div>
     <ng-template #showsBlock>
             <div class="container">
-                <div *ngFor="let show of myShows; let i = index">
+                <div *ngFor="let show of shows; let i = index">
                     <div *ngIf="subsList[show.id]" class="tile">
                         <div class="col-md-1 col-sm-2 col-xs-2">
                                 <img src="{{show.image.medium || show.image}}" height="150px" width="100px" class="myImg">
